@@ -1,5 +1,7 @@
 = HEAD
 
+* Make Roda.plugin always return nil (jeremyevans)
+
 * Add :gzip option to assets plugin (jeremyevans)
 
 = 2.3.0 (2015-05-13)
